# solana-emotional-metadata

./: .gitignore  Cargo.toml  DEPLOYMENT.md  EXTRACTION_GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_REPORT.md  README.md  SOLANA_SPECIFIC_IMPLEMENTATION_REPORT.md  SOLANA_SPECIFIC_README.md  SOLANA_SPECIFIC_TECHNICAL_ARCHITECTURE.md  SUBMISSION_README.md  TECHNICAL_ARCHITECTURE.md  build-solana-grant.sh  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
scripts/: install-cli-tools.sh
src/: App.tsx  index.css
src/components/: CrossChainBridge.tsx  LeapMotionSensors.tsx  MediaPipeSensors.tsx  RealBiometricCapture.tsx  RealIntegratedRenderer.tsx  SolanaAIPanel.tsx
src/config/: blockchain-config.js
src/pages/: AIFractalStudio.tsx  BiometricNFTMinter.tsx  BitteAIMarketplace.tsx  FractalStudio.tsx  PolkadotSoulboundIdentity.tsx  SolanaEmotionalNFT.tsx
src/rust-client/: Cargo.toml
src/rust-client/shaders/: neural_compute.frag  neural_compute.vert
src/rust-client/src/: ai_blockchain_integration.rs  ai_fractal_integration.rs  blockchain_integration.rs  comprehensive_integration.rs  disciplinary_enforcer.rs  enhanced_biometric_engine.rs  enhanced_soulbound.rs  enhanced_webgpu_engine.rs  lib.rs  real_ai_integration.rs  webgpu_engine.rs
src/solana-client/: Cargo.toml  build.sh
src/solana-client/src/: lib.rs  neuroemotive.rs  storage_advanced.rs  stream_diffusion.rs
src/solana-programs/biometric-nft/: Anchor.toml
src/solana-programs/biometric-nft/programs/biometric-nft/src/: lib.rs
src/solana-programs/tests/: solana-emotional-metadata.ts
src/utils/: filecoin-storage.ts  hybrid-ai-manager.ts  real-ipfs-storage.ts  solana-client.ts  solana-enhanced-integration.ts  unified-ai-ml-integration.js
test-website/: index.html
